[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Level.gd" type="Script" id=4]
[ext_resource path="res://assets/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 639.266, 16.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.027451, 0.129412, 1 )

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_bottom = -500.0
custom_colors/font_color = Color( 0, 0.839216, 0.376471, 1 )
custom_fonts/font = SubResource( 4 )
text = "Player Score
0"
align = 1
valign = 1

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_bottom = -500.0
custom_colors/font_color = Color( 0, 0.839216, 0.376471, 1 )
custom_fonts/font = SubResource( 5 )
text = "CPU Score:
0"
align = 1
valign = 1

[node name="TimerDisplay" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
custom_colors/font_color = Color( 0.992157, 0.709804, 0.2, 1 )
custom_fonts/font = SubResource( 6 )
text = "Countdown"
align = 1
valign = 1

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 75, 360 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1205, 360 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )
scale = Vector2( 0.5, 0.5 )

[node name="WallTop" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 639.266, -16.5 )
shape = SubResource( 1 )

[node name="WallBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, 725 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 639.344, 11.25 )
shape = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -31, 359.5 )
shape = SubResource( 2 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1341, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( -30, 360 )
shape = SubResource( 2 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
